Bug 292159 - KDevelop always inserts spaces for indentation regardless of settings
Summary: KDevelop always inserts spaces for indentation regardless of settings
Status: RESOLVED FIXED
Alias: None
Product: kdevelop
Classification: Applications
Component: All editors (other bugs)
Version First Reported In: git master
Platform: Ubuntu Linux
: VHI critical
Target Milestone: 4.2.3
Assignee: kdevelop-bugs-null
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-01-22 05:30 UTC by Chris Clearwater
Modified: 2014-07-01 16:07 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Chris Clearwater 2012-01-22 05:30:25 UTC
Version:           git master (using KDE 4.7.4) 
OS:                Linux

I set the Editing->Indentation "Indent Using" option to tabulators and KDevelop still always uses spaces.

Reproducible: Always

Steps to Reproduce:
press tab

Actual Results:  
inserts spaces

Expected Results:  
inserts tab
Comment 1 Milian Wolff 2012-01-23 08:50:21 UTC
irc discussion shows it's somehow related to our sourceformatter. i.e. he's the correct kate settings and it works as wanted in e.g. .txt files in kdevelop. but in c++ files somehow not :-/
Comment 2 Belhorma Bendebiche 2012-01-23 19:32:35 UTC
I can confirm this now happens to me as well after pulling from git master. It happened once a few months back and I was able to fix it by unticking "Override Kate Indentation Mode" in Source Formatter settings, but this no longer has any effect.

As a workaround, you can create your own formatter style that uses tabs for indentation, but I'd still like to see this fixed.
Comment 3 Andreas Pakulat 2012-02-15 16:16:54 UTC
This is a regression and breaks people's code formatting, so needs to be fixed before the release. Also setting confirmed now, there's been 3 more people in IRC in the last day complaining about this in beta2.
Comment 4 David Nolden 2012-02-15 23:02:57 UTC
Git commit 3c196e69a92b648e6fe0822bba7f62f6e16a0bd6 by David nolden.
Committed on 16/02/2012 at 00:01.
Pushed by zwabel into branch '1.3'.

Consistenty set the default-value of the "override kate indentation" config to false

M  +2    -2    shell/sourceformattercontroller.cpp

http://commits.kde.org/kdevplatform/3c196e69a92b648e6fe0822bba7f62f6e16a0bd6
Comment 5 Maciej Mrozowski 2014-07-01 16:03:28 UTC
Well, now it forces tabs regardless the settings :P
kdvelop-4.6.0 Fedora 20 packages.
Comment 6 Maciej Mrozowski 2014-07-01 16:07:29 UTC
(In reply to comment #5)
> Well, now it forces tabs regardless the settings :P
> kdvelop-4.6.0 Fedora 20 packages.

And after restarting kdevelop, seems to be ok again. Strange things happening.