Consistenty set the default-value of the "override kate indentation" config to false

BUG: 292159